log
Fri 29 Mar 2024 09:42:50 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:37:13: error: expected expression before ‘List’
   37 |      return List;
      |             ^~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ff95e12
Fri 29 Mar 2024 09:43:09 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:37:13: error: expected expression before ‘List’
   37 |      return List;
      |             ^~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7545250
Fri 29 Mar 2024 09:44:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
 tests:  1|5
total_score: 10/70
total_score: 10/70
e2c18e3
e2c18e3
Fri 29 Mar 2024 09:46:52 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
590c381
Fri 29 Mar 2024 09:52:48 PM UTC: 
 list.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  0|0
2a1c86a
Fri 29 Mar 2024 09:58:09 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0f471b2
Fri 29 Mar 2024 09:58:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a8dcbd
Fri 29 Mar 2024 09:58:47 PM UTC: 
 list.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
test.c: In function ‘prevList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:89:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   89 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:80:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   80 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:67:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   67 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4f2b508
Fri 29 Mar 2024 09:59:15 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
af74313
Fri 29 Mar 2024 10:00:12 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
93e3008
Fri 29 Mar 2024 10:00:59 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|0
   [ INFO ] llamando a nextList
9618836
Fri 29 Mar 2024 10:01:36 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
06d27eb
Fri 29 Mar 2024 10:02:15 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
701df13
Fri 29 Mar 2024 10:02:36 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
0fd8b30
Fri 29 Mar 2024 10:07:52 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
d7baf2a
Fri 29 Mar 2024 10:10:29 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|0
   [ INFO ] Insertando 43 a la lista (pushfront)
f058caa
Fri 29 Mar 2024 10:14:57 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|0
61f0d31
Fri 29 Mar 2024 10:17:54 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
202f934
Fri 29 Mar 2024 10:18:24 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
937f866
Fri 29 Mar 2024 10:20:14 PM UTC: 
 list.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:73:33: error: expected expression before ‘)’ token
   73 |   if(list == NULL) return exit(*);
      |                                 ^
list.c:73:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   73 |   if(list == NULL) return exit(*);
      |                           ^~~~
list.c:72:6: note: declared here
   72 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:75:33: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   75 |   if(list->head == NULL) return NULL;
      |                                 ^~~~
list.c:72:6: note: declared here
   72 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c6bbe23
Fri 29 Mar 2024 10:21:18 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  9|0
   [ INFO ] Insertando 8 a la lista (pushfront)
35be71e
